Allow to pass user credentials via callbacks